src_old/objects/ProjectServiceTarget__c.object
<CustomObject>
    <description>Relates a Target to a Project Service. Targets are manually added when building a Project. Project Service Target related to Project Service, Target, and Account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Service Target</relationshipLabel>
        <relationshipName>Project_Service_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CeatedByExternalSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ceated By External Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDonated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotForResale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not For Resale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ProjectAccount__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ProjectAccount__c</referenceTo>
        <relationshipLabel>Project Service Target</relationshipLabel>
        <relationshipName>Project_Service_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>ProjectService__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Project Service Target</relationshipLabel>
        <relationshipName>ProjectServiceTargets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Service Target</relationshipLabel>
        <relationshipName>Project_Service_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetAcquired__c</fullName>
        <label>TargetAcquired</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Donated</fullName>
                </value>
                <value>
                    <fullName>In Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetBrand__c</fullName>
        <formula>Target__r.BrandInfo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetCategory__c</fullName>
        <formula>Target__r.CategoryInfo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetDepartment__c</fullName>
        <formula>Target__r.DepartmentName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetDescription__c</fullName>
        <formula>Target__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetName__c</fullName>
        <formula>Target__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetPLU__c</fullName>
        <formula>Target__r.PLU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target PLU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetStockCode__c</fullName>
        <formula>Target__r.StockCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Stock Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetUPC__c</fullName>
        <formula>Target__r.UPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target UPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetVendorNumber__c</fullName>
        <formula>Target__r.VendorNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Vendor Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Project Service Target</relationshipLabel>
        <relationshipName>ServiceTargets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>Price__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Survey &amp; Reporting</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YieldPerUnit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yield Per Unit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customdesc__c</fullName>
        <label>customdesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Service Target</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Target</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Zero_Price_for_item_not_donated</fullName>
        <active>true</active>
        <errorConditionFormula>Price__c &gt; 0.0 &amp;&amp;  TEXT(TargetAcquired__c) = &apos;Donated&apos;</errorConditionFormula>
        <errorDisplayField>Target__c</errorDisplayField>
        <errorMessage>Price needs to be zero (0) for donated items</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validateTargetType</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISNEW(),ProjectService__r.NumberOfTargets__c &gt; 0,   ProjectService__r.TargetType__c !=  Target__r.RecordType.Name)</errorConditionFormula>
        <errorMessage>Target Types do not match.</errorMessage>
    </validationRules>
</CustomObject>